# narrate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  extending.md  mcp.md
examples/: README.md  acme_notes.py
src/narrate/: __init__.py  config.py  container.py  exceptions.py  plugins.py
src/narrate/cli/: __init__.py  main.py
src/narrate/mcp/: __init__.py  server.py
src/narrate/models/: __init__.py  entities.py  enums.py  support.py
src/narrate/orchestration/: __init__.py  engine.py  planner.py
src/narrate/publishing/: __init__.py  base.py  registry.py
src/narrate/publishing/builtin/: __init__.py  filesystem.py  static_site.py  webhook.py
src/narrate/rendering/: __init__.py  base.py  registry.py
src/narrate/rendering/builtin/: __init__.py  cues.py  decks.py  gif.py  html_slides.py  markdown.py  pptx.py  remotion.py  script.py  subtitles.py  thumbnail.py  transcript.py
src/narrate/storage/: __init__.py  blob_store.py  database.py  orm.py  repositories.py
tests/: conftest.py
tests/integration/: test_cli.py  test_lifecycle.py  test_mcp_server.py
tests/unit/: test_blob_store.py  test_config.py  test_engine.py  test_planner.py  test_publishers.py  test_registry.py  test_renderers.py  test_repositories.py  test_support.py
